<resources>
    <string name="app_name">Login Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="powered_by_ferec">Powered by Ferec</string>

    <string name="loginFragment_title_logi">Logi</string>
    <string name="loginFragment_title_viti">Viti</string>
    <string name="loginFragment_sign_up">Sign Up</string>
    <string name="loginFragment_sign_in">Sign In</string>
    <string name="loginFragment_forgot_password">Forgot Password</string>
    <string name="loginFragment_email_hint">Email</string>
    <string name="loginFragment_password_hint">Password</string>
    <string name="loginFragment_login_title">Login</string>
    <string name="loginFragment_login_subtitle">To get to your account!</string>

    <string name="loginFragment_invalid_email">Invalid email</string>
    <string name="loginFragment_invalid_password">Invalid password</string>
    <string name="loginFragment_login_failed">Login failed!</string>
    <string name="loginFragment_register_failed">Register failed!</string>
    <string name="loginFragment_restorePass_failed">Restoring password failed!</string>
    <string name="loginFragment_register_success">Register success!</string>
    <string name="forgotPassBottomSheet_button_submit">Submit</string>
    <string name="loginFragment_your_pass_is">Your password is: %1$s</string>

    <string name="homeFragment_title">Logged in!</string>
    <string name="homeFragment_menuItem_logOut">Log out</string>
    <string name="homeFragment_menuItem_logOut_description">Log out icon</string>

    <string name="homeFragment_welcome">Welcome %1$s!</string>

</resources>